# fswatcher

./: CMakeLists.txt  README.md  fs_watcher.cpp  fs_watcher.h  main.cpp
src/: fs_watcher.h
src/filesystem/: event.cpp  event.h  event_sub.h  watcher.cpp  watcher.h
